--- a/ExplorerGUIMike/App.xaml
+++ b/ExplorerGUIMike/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="MultitouchExplorer.App"
+﻿<Application x:Class="ExplorerGUIMike.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     StartupUri="Window1.xaml">
