--- a/ExplorerGUIMike/TableControl.xaml
+++ b/ExplorerGUIMike/TableControl.xaml
@@ -1,4 +1,4 @@
-﻿<controls:TableApplicationControl x:Class="MultitouchExplorer.TableControl"
+﻿<controls:TableApplicationControl x:Class="ExplorerGUIMike.TableControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:libSMARTMultiTouch.Controls;assembly=libSMARTMultiTouch"
