--- a/ExplorerGUICombined/MainWindow.xaml
+++ b/ExplorerGUICombined/MainWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="ExplorerGUICombined.Window1"
+﻿<Window x:Class="ExplorerGUICombined.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Window1" Height="300" Width="300">
+    Title="MainWindow" Height="300" Width="300">
     <Grid x:Name="LayoutRoot">
         
     </Grid>
